package ua.spro.todolist.model.dto;

public record RegistrationRequest(String username, String password) {}
