package ua.spro.todolist.model.dto;

public record UserDto(Long id, String username, String password) {}
