@startuml

package "Entities" {
  class User {
    Long id
    String username
    String password
    Set<Task> tasks
  }

  class Task {
    Long id
    String title
    String description
    LocalDateTime dueDate
    boolean completed
    User user
    Set<FileAttachment> attachments
  }

  class FileAttachment {
    Long id
    String fileName
    byte[] data
    String contentType
    Task task
  }
}

package "DTOs" {
  class UserDto {
    Long id
    String username
    String password
  }

  class TaskDto {
    Long id
    String title
    String description
    LocalDateTime dueDate
    boolean completed
    Set<FileAttachmentDTO> attachments
  }

  class FileAttachmentDto {
    Long id
    String fileName
    String contentType
  }

  class RegistrationRequest{
    String username
    String password
   }

   class TaskRequest{
      String title,
      String description,
      LocalDateTime dueDate,
      Boolean completed,
      Set<MultipartFile> attachments
   }
}

package "Controllers" {
  class UserController {
    + registerUser(RegistrationRequest request)
  }

  class TaskController {
    + createTask(TaskDTO task)
    + getTaskById(Long taskId))
    + viewTasks(Map<String, String> params)
    + updateTask(Long taskId, UpdateTaskRequest task)
    + deleteTask(Long taskId)
  }
}

package "Services" {
  class UserService {
    + registerNewUser(RegistrationRequest request))
  }

  class TaskService {
  + createTask(CreateTaskRequest taskDto);
  + viewTasksWithFilters(Map<String, String> params);
  + updateTask(Long taskId, UpdateTaskRequest request);
  + deleteTask(Long taskId);
  + getFileAttachmentsByTask(Long taskId);
  + getTaskById(Long taskId);
  }

}

package "Repositories" {
  class UserRepository {
  + existsByUsername(String username);
  + findByUsername(String username);
  }

  class TaskRepository {
  }

  class FileRepository {
  }
}

User "1" --> "0..*" Task
Task "1" --> "0..*" FileAttachment

@enduml
